# audio-notes-qt

./: .gitignore  CMakeLists.txt  README.md
resources/: qml.qrc
resources/qml/: main.qml
resources/qml/views/empty-repository/: EmptyRepositoriesView.qml
resources/qml/views/notes-repository/: AudioNotesListView.qml  RepositoriesView.qml  RepositoryListView.qml
resources/qml/views/notes-repository/components/: AudioNoteCreationPanel.qml  AudioNoteListItemView.qml  AudioTrackView.qml
src/: AudioNoteCreator.cpp  AudioNotesApp.cpp  AudioNotesApp.h  main.cpp
src/models/: AudioNote.cpp  AudioNote.h  AudioNotesApp.cpp  AudioNotesApp.h  AudioNotesModel.cpp  AudioNotesModel.h  AudioNotesRepo.cpp  AudioNotesRepo.h  AudioNotesReposModel.cpp  AudioNotesReposModel.h
src/util/: AudioNoteCreator.cpp  AudioNoteCreator.h  AudioNoteRecorder.cpp  AudioNoteRecorder.h  Scanner.cpp  Scanner.h
